--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,14 @@ body {
   color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
